--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/helioricardo/driven-occ/issues"
   },
-  "homepage": "https://github.com/helioricardo/driven-occ#readme"
+  "homepage": "https://github.com/helioricardo/driven-occ#readme",
+  "dependencies": {
+    "commander": "^6.1.0",
+    "dotenv": "^8.2.0"
+  }
 }
