--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/helioricardo/driven-occ#readme",
   "dependencies": {
     "commander": "^6.1.0",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "fs": "0.0.1-security"
   }
 }
