--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/helioricardo/driven-occ#readme",
   "dependencies": {
     "@oraclecc/dcu": "^1.6.0",
+    "axios": "^0.20.0",
     "commander": "^6.1.0",
     "dotenv": "^8.2.0",
     "fs": "0.0.1-security",
