--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^8.2.0",
     "fs": "0.0.1-security",
     "inquirer": "^7.3.3",
+    "replace-in-file": "^6.1.0",
     "shelljs": "^0.8.4"
   }
 }
