--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "driven-occ",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "A CLI to manage OCC development at Driven.cx",
   "main": "index.js",
   "scripts": {
@@ -28,6 +28,7 @@
     "@oraclecc/dcu": "^1.6.0",
     "archiver": "^5.0.2",
     "axios": "^0.20.0",
+    "browser-sync": "^2.26.13",
     "commander": "^6.1.0",
     "dotenv": "^8.2.0",
     "extract-zip": "^2.0.1",
