--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "driven-occ",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "A CLI to manage OCC development at Driven.cx",
   "main": "index.js",
   "scripts": {
@@ -36,6 +36,7 @@
     "fs": "0.0.1-security",
     "inquirer": "^7.3.3",
     "inquirer-search-list": "^1.2.6",
+    "normalize-path": "^3.0.0",
     "replace-in-file": "^6.1.0",
     "shelljs": "^0.8.4",
     "zip-local": "^0.3.4"
